test/testdata/classes/instance/this_missing_property_error.lox
class Foo {
  bar() {
    // lint warning: 'Foo' class has no property 'baz'
    // error: 'Foo' object has no property 'baz'
    this.baz();
  }
}

var foo = Foo();
foo.bar();
